Finally wrapped up the view tests

--- a/server/actionlog/fixtures/test_api.yaml
+++ b/server/actionlog/fixtures/test_api.yaml
@@ -32,13 +32,29 @@
     model: zemauth.user
     pk: 2
 
+-   fields:
+        date_joined: '2014-06-16T12:21:29'
+        email: supertestuser@test.com
+        first_name: ''
+        groups: []
+        is_active: true
+        is_staff: true
+        is_superuser: true
+        last_login: '2014-06-16T12:21:29'
+        last_name: ''
+        password: pbkdf2_sha256$12000$sLa33nAjknrE$D1ygaCbM0vkEiBMnM3d4wks49zb2W2xwcDqTj0279TA=
+        user_permissions: []
+        username: ''
+    model: zemauth.user
+    pk: 3
+
 # test account
 
 -   fields:
         created_dt: '2014-06-04T09:58:21'
         modified_dt: '2014-06-04T09:58:21'
         modified_by: 1
-        users: [1, 2]
+        users: [1, 2, 3]
         name: 'test account 1 Čžš'
     model: dash.account
     pk: 1
@@ -127,7 +143,7 @@
 
 -   fields:
         type: 'b1'
-        available_actions: [4]
+        available_actions: [4, 19]
     model: dash.sourcetype
     pk: 1
 
