Install chrome stable in circle

--- a/circle.yml
+++ b/circle.yml
@@ -33,6 +33,7 @@ dependencies:
 
 test:
     pre:
+        - 'sudo apt-get upgrade google-chrome-stable'
         - 'python manage.py collectstatic --noinput':
             pwd: server
             parallel: true
