Store crop areas on upload and return them in export

--- a/server/actionlog/fixtures/test_api.yaml
+++ b/server/actionlog/fixtures/test_api.yaml
@@ -824,6 +824,7 @@
         brand_name: 'Example'
         description: 'Example description'
         call_to_action: 'Call to action'
+        crop_areas: '(((44, 22), (144, 122)), ((33, 22), (177, 122)))'
     model: dash.contentad
     pk: 1
 
