--- a/server/server/localsettings.py.template
+++ b/server/server/localsettings.py.template
@@ -155,4 +155,6 @@ R1_BLANK_REDIRECT_URL = 'http://r1.zemanta.com/b/{redirect_id}/z1/1/{content_ad_
 R1_CONVERSION_STATS_URL = 'https://r1.zemanta.com/api/conversions/request/{date}/'
 R1_CONVERSION_STATS_RESULT_URL = 'https://r1.zemanta.com/api/conversions/result/{job_id}/'
 
+BIDDER_API_SIGN_KEY = ''
+
 SHARETHROUGH_PARAM_SIGN_KEY = ''
