Add cron for conversion pixels monitoring

--- a/cron.yaml
+++ b/cron.yaml
@@ -26,6 +26,9 @@ cron:
   job: '15,45 * * * * cd ~/apps/server/server && ~/.virtualenvs/server/bin/python manage.py monitor_content_ads > /dev/null 2>&1'
 
 - hosts: [knot01.zemanta.com]
+  job: '30 * * * * cd ~/apps/server/server && ~/.virtualenvs/server/bin/python manage.py monitor_conversion_pixels > /dev/null 2>&1'
+
+- hosts: [knot01.zemanta.com]
   job: '30 16 * * * cd ~/apps/server/server && ~/.virtualenvs/server/bin/python manage.py send_supply_report_emails > /dev/null 2>&1'
 
 - hosts: [knot01.zemanta.com]
