--- a/cron.yaml
+++ b/cron.yaml
@@ -45,3 +45,6 @@ cron:
 
 - hosts: [knot01.zemanta.com]
   job: '0 5,7,9 * * * cd ~/apps/server/server && ~/.virtualenvs/server/bin/python manage.py fetch_reports_by_publisher > /dev/null 2>&1'
+
+- hosts: [knot01.zemanta.com]
+  job: '0 6 * * * cd ~/apps/server/server && ~/.virtualenvs/server/bin/python manage.py send_content_approval_email > /dev/null 2>&1'
