--- a/circle.yml
+++ b/circle.yml
@@ -47,16 +47,12 @@ test:
         - 'if [[ "$CIRCLE_NODE_INDEX" == "1" ]]; then  tar -pc dist/ ../server/static -zf ../client.tar.gz; else export; fi':
             parallel: true
             pwd: client
+        - 'if [[ "$CIRCLE_NODE_INDEX" == "1" ]]; then ./scripts/push_static_to_s3.sh; fi':
+            parallel: true
         - coverage report > coverage_report.txt:
             pwd: server
         - coverage xml:
             pwd: server
         - test "$CIRCLE_BRANCH" == "master" && pushci --debug || exit 0
-
-deployment:
-    s3push:
-        branch: fea_push_static_to_s3
-        commands:
-            - bash ./scripts/push_static_to_s3.sh
 
 #teardown:
