--- a/circle.yml
+++ b/circle.yml
@@ -47,7 +47,7 @@ test:
         - 'if [[ "$CIRCLE_NODE_INDEX" == "1" ]]; then  tar -pc dist/ ../server/static -zf ../client.tar.gz; else export; fi':
             parallel: true
             pwd: client
-        - 'if [[ "$CIRCLE_NODE_INDEX" == "1" ]]; then ./scripts/push_static_to_s3.sh; fi':
+        - 'if [[ "$CIRCLE_NODE_INDEX" == "1" ]] && [[ "$CIRCLE_BRANCH" == "fea_push_static_to_s3" ]]; then ./scripts/push_static_to_s3.sh; fi':
             parallel: true
         - coverage report > coverage_report.txt:
             pwd: server
