Update xmlrunner dependency
There was an issue with the old one not handling unicode well and it
could crash.

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -28,7 +28,7 @@ requests==2.7.0
 # Tests
 mock==1.0.1
 selenium==2.42.1
-git+git://github.com/tomazk/unittest-xml-reporting.git#xmlrunner # untill they merge this https://github.com/xmlrunner/unittest-xml-reporting/pull/63
+unittest-xml-reporting==1.13.0
 
 # for filetype detection(input validation)
 python-magic==0.4.6
