--- a/server/dash/fixtures/test_views.yaml
+++ b/server/dash/fixtures/test_views.yaml
@@ -69,6 +69,7 @@
         default_account_manager: 2
         default_sales_representative: 3
         service_fee: 0.13
+        allowed_sources: [1, 2]
     model: dash.accountsettings
     pk: 1
 
