Adds a missing fixture

--- a/server/actionlog/fixtures/test_api.yaml
+++ b/server/actionlog/fixtures/test_api.yaml
@@ -1011,6 +1011,15 @@
     model: dash.adgroupsourcesettings
     pk: 4
 
+-   fields:
+        created_dt: '2014-06-05T09:58:21'
+        ad_group_source: 11
+        cpc_cc: null
+        daily_budget_cc: null
+        state: 1
+    model: dash.adgroupsourcesettings
+    pk: 6
+
 # test adgroupsourcestate
 
 -   fields:
