--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,16 +29,16 @@ memcached:
     expose:
       - "11211"
 
-eins_static:
-    container_name: eins-static
-    hostname: eins-static
+einsstatic:
+    container_name: einsstatic
+    hostname: einsstatic
     image: digitallyseamless/nodejs-bower-grunt
-    expose:
-      - "9999"
+    ports:
+      - "9999:9999"
     volumes:
       - "./client/:/data/"
     entrypoint: /bin/bash
-    command: -c "npm prune && npm install; bower --config.interactive=false install ; grunt ; grunt connect:dev:keepalive"
+    command: -c "npm prune && npm install; grunt dev"
     tty: true
 
 eins:
@@ -46,13 +46,14 @@ eins:
     restart: always
     hostname: eins
     image: zemanta/z1
-    expose:
-      - "8000"
+    ports:
+      - "8000:8000"
     links:
-      - postgres
+      - "postgres"
       - "postgres:db"
       - "statsd:statsd"
       - "memcached:memcached"
+      - "einsstatic"
     volumes:
       - "$HOME/docker-vols/eins/logs/:/app/logs/" # this one will create new folder in your home if it doesn't exist
       - "./server/:/app/zemanta-eins/"
@@ -64,12 +65,12 @@ eins:
     stdin_open: true
 
 
-proxy:
-    image: nginx
-    ports:
-      - "80:80"
-    links:
-      - "eins_static"
-      - "eins"
-    volumes:
-      - "./docker/nginx-dev.conf:/etc/nginx/nginx.conf"
+# proxy:
+#     image: nginx
+#     ports:
+#       - "80:80"
+#     links:
+#       - "eins_static"
+#       - "eins"
+#     volumes:
+#       - "./docker/nginx-dev.conf:/etc/nginx/nginx.conf"
