--- a/server/reports/fixtures/test_api_contentads.yaml
+++ b/server/reports/fixtures/test_api_contentads.yaml
@@ -37,6 +37,24 @@
     model: dash.campaign
     pk: 1
 
+-   fields:
+        created_dt: '2014-06-04T09:58:21'
+        modified_dt: '2014-06-04T09:58:21'
+        modified_by: 1
+        account: 1 # test account 1
+        name: 'test campaign 2'
+    model: dash.campaign
+    pk: 2
+
+-   fields:
+        created_dt: '2014-06-04T09:58:21'
+        modified_dt: '2014-06-04T09:58:21'
+        modified_by: 1
+        account: 1 # test account 1
+        name: 'test campaign 3'
+    model: dash.campaign
+    pk: 3
+
 # test adgroup
 
 -   fields:
@@ -52,7 +70,7 @@
         created_dt: '2014-06-04T09:58:21'
         modified_dt: '2014-06-04T09:58:21'
         modified_by: 1
-        campaign: 1
+        campaign: 2
         name: 'test adgroup 2'
     model: dash.adgroup
     pk: 2
@@ -61,7 +79,7 @@
         created_dt: '2014-06-04T09:58:21'
         modified_dt: '2014-06-04T09:58:21'
         modified_by: 1
-        campaign: 1
+        campaign: 3
         name: 'test adgroup 3'
     model: dash.adgroup
     pk: 3
@@ -458,7 +476,7 @@
         campaign: 1
         name: 'test demo adgroup 1'
     model: dash.adgroup
-    pk: 3
+    pk: 5
 
 -   fields:
         created_dt: '2014-06-04T09:58:21'
@@ -467,5 +485,4 @@
         campaign: 1
         name: 'test demo adgroup 2'
     model: dash.adgroup
-    pk: 4
-
+    pk: 6
