bugfix and adding more tests for permission

--- a/server/dash/fixtures/test_account_agency.yaml
+++ b/server/dash/fixtures/test_account_agency.yaml
@@ -4,6 +4,7 @@
         tracking_slug: Source_1
         name: Source 1
         deprecated: true
+        released: true
         created_dt: '2015-09-23T09:57:22'
         modified_dt: '2015-09-23T09:57:22'
     model: dash.Source 
