--- a/server/actionlog/fixtures/test_api.yaml
+++ b/server/actionlog/fixtures/test_api.yaml
@@ -288,6 +288,7 @@
         brand_name: 'Example'
         description: 'Example description'
         call_to_action: 'Call to action'
+        daily_budget_cc: 100
         ad_group_name: 'AdGroup name'
         start_date: '2015-03-02'
         end_date: '2015-04-02'
