--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -38,3 +38,6 @@ django-extensions==1.3.7
 
 # for admin lists exports
 django-import-export==0.2.8
+
+# for accessing Google Analytics
+google-api-python-client==1.4.2
