--- a/server/dash/fixtures/test_views.yaml
+++ b/server/dash/fixtures/test_views.yaml
@@ -79,7 +79,7 @@
         created_dt: '2014-06-04T09:58:21'
         created_by: 1
         archived: False
-        account_manager: 2
+        campaign_manager: 2
         campaign_goal: 3
         goal_quantity: 0
         target_devices: ['mobile']
