--- a/server/actionlog/fixtures/test_api.yaml
+++ b/server/actionlog/fixtures/test_api.yaml
@@ -732,7 +732,8 @@
         created_dt: '2014-06-04T00:00:00'
         created_by: 1
         name: 'test campaign 2'
-        campaign_manager: NULL
+        account_manager: NULL
+        sales_representative: NULL
         iab_category: 'IAB24'
         campaign_goal: 4
         goal_quantity: 10
@@ -746,7 +747,8 @@
         created_dt: '2014-06-04T00:00:00'
         created_by: 1
         name: 'test campaign 4'
-        campaign_manager: NULL
+        account_manager: NULL
+        sales_representative: NULL
         iab_category: 'IAB24'
         campaign: 4
         archived: True
@@ -757,7 +759,7 @@
         created_dt: '2014-06-04T00:00:00'
         created_by: 1
         name: 'test campaign 5'
-        campaign_manager: NULL
+        account_manager: NULL
         campaign: 5
         archived: True
     model: dash.campaignsettings
