--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,6 +1,15 @@
 engines:
   pep8:
     enabled: true
+  radon:
+    enabled: true
+  fixme:
+    enabled: true
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - python
 
 ratings:
    paths:
