--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,6 +3,8 @@ engines:
     enabled: true
   radon:
     enabled: true
+    config: 
+      threshold: "B"
   fixme:
     enabled: true
   duplication:
