Set radon treshold to C

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -4,7 +4,7 @@ engines:
   radon:
     enabled: true
     config: 
-      threshold: "B"
+      threshold: "C"
   fixme:
     enabled: true
   duplication:
