--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,6 +11,9 @@ rules:
   semi:
     - 2
     - always
+  comma-dangle:
+    - 2
+    - "always-multiline"
 env:
   browser: true
 extends: 'eslint:recommended'
