--- a/circle.yml
+++ b/circle.yml
@@ -36,6 +36,8 @@ test:
         - 'python manage.py collectstatic --noinput':
             pwd: server
             parallel: true
+        - rm -r coverage/lcov/*
+            pwd: client
     override:
         - 'case $CIRCLE_NODE_INDEX in 0) cd server && coverage run manage.py test ;; 1) cd client && grunt test --build-number ${CIRCLE_BUILD_NUM} && cd .. && ./run_e2e.sh ;; esac':
             parallel: true
@@ -56,6 +58,8 @@ test:
             pwd: server
         - coverage xml:
             pwd: server
+        - cat coverage/lcov/*/lcov.info | node_modules/codeclimate-test-reporter/bin/codeclimate.js
+            pwd: client
         - test "$CIRCLE_BRANCH" == "master" && pushci --debug || exit 0
 
 #teardown:
