--- a/circle.yml
+++ b/circle.yml
@@ -56,6 +56,8 @@ test:
             pwd: server
         - coverage xml:
             pwd: server
+        - ls:
+            pwd: client
         - cat coverage/lcov/*/lcov.info | node_modules/codeclimate-test-reporter/bin/codeclimate.js:
             pwd: client
         - test "$CIRCLE_BRANCH" == "master" && pushci --debug || exit 0
