--- a/circle.yml
+++ b/circle.yml
@@ -37,7 +37,7 @@ test:
             pwd: server
             parallel: true
     override:
-        - 'case $CIRCLE_NODE_INDEX in 0) cd server && coverage run manage.py test ;; 1) cd client && grunt test --build-number ${CIRCLE_BUILD_NUM} && ls && cd .. && ./run_e2e.sh ;; esac':
+        - 'case $CIRCLE_NODE_INDEX in 0) cd server && coverage run manage.py test ;; 1) cd client && grunt test --build-number ${CIRCLE_BUILD_NUM} && cat coverage/lcov/*/lcov.info | node_modules/codeclimate-test-reporter/bin/codeclimate.js && cd .. && ./run_e2e.sh ;; esac':
             parallel: true
     post:
         - 'mkdir client/dist && git rev-parse HEAD | tee server/git_commit_hash.txt client/dist/git_commit_hash.txt'
@@ -56,10 +56,6 @@ test:
             pwd: server
         - coverage xml:
             pwd: server
-        - ls:
-            pwd: client
-        - cat coverage/lcov/*/lcov.info | node_modules/codeclimate-test-reporter/bin/codeclimate.js:
-            pwd: client
         - test "$CIRCLE_BRANCH" == "master" && pushci --debug || exit 0
 
 #teardown:
