--- a/server/actionlog/fixtures/test_api.yaml
+++ b/server/actionlog/fixtures/test_api.yaml
@@ -56,6 +56,7 @@
         modified_dt: '2014-06-04T09:58:21'
         modified_by: 1
         users: [1, 2, 3]
+        allowed_sources: [1,2,3,4,5,6,7,8,9]
         name: 'test account 1 Čžš'
     model: dash.account
     pk: 1
