--- a/server/dash/fixtures/test_io.yaml
+++ b/server/dash/fixtures/test_io.yaml
@@ -23,6 +23,7 @@
         modified_dt: '2014-06-04T09:58:21'
         modified_by: 1
         name: 'test account 1'
+        uses_credits: 1
     model: dash.account
     pk: 1
 
@@ -31,6 +32,7 @@
         modified_dt: '2014-06-04T09:58:21'
         modified_by: 1
         name: 'test account 2'
+        uses_credits: 1
     model: dash.account
     pk: 2
 
@@ -39,6 +41,7 @@
         modified_dt: '2014-06-04T09:58:21'
         modified_by: 1
         name: 'test account 3'
+        uses_credits: 1
     model: dash.account
     pk: 3
 
