Add support for additional conversion goals

--- a/server/dash/fixtures/test_views.yaml
+++ b/server/dash/fixtures/test_views.yaml
@@ -143,6 +143,39 @@
     model: dash.conversiongoal
     pk: 2
 
+-   fields:
+        campaign: 1
+        type: 2
+        pixel: null
+        name: 'test conversion goal 3'
+        conversion_window: null
+        goal_id: '3'
+        created_dt: '2015-09-23T09:57:22'
+    model: dash.conversiongoal
+    pk: 3
+
+-   fields:
+        campaign: 1
+        type: 3
+        pixel: null
+        name: 'test conversion goal 4'
+        conversion_window: null
+        goal_id: '4'
+        created_dt: '2015-09-23T09:57:22'
+    model: dash.conversiongoal
+    pk: 4
+
+-   fields:
+        campaign: 1
+        type: 3
+        pixel: null
+        name: 'test conversion goal 5'
+        conversion_window: null
+        goal_id: '5'
+        created_dt: '2015-09-23T09:57:22'
+    model: dash.conversiongoal
+    pk: 5
+
 # test campaign budget
 
 -   fields:
