Update tests - preapre new yaml

--- a/server/dash/fixtures/test_models.yaml
+++ b/server/dash/fixtures/test_models.yaml
@@ -10,7 +10,7 @@
         is_superuser: true
         last_login: '2014-06-16T12:21:29'
         last_name: ''
-        password: pbkdf2_sha256$12000$ekG2j1OyTgy0$dzdTxiFUkB0uQXWdvV4enBMdOs/8D/J7Jl5zDtKsMZA=
+        password: pbkdf2_sha256$12000$sLa33nAjknrE$D1ygaCbM0vkEiBMnM3d4wks49zb2W2xwcDqTj0279TA= # == 'secret'
         user_permissions: []
         username: ''
     model: zemauth.user
@@ -24,6 +24,7 @@
         modified_by: 1
         name: 'test account 1'
         allowed_sources: [1,2]
+        users: [1]
     model: dash.account
     pk: 1
 
