--- a/server/automation/fixtures/test_automation.yaml
+++ b/server/automation/fixtures/test_automation.yaml
@@ -167,6 +167,24 @@
     model: dash.source
     pk: 1
 
+-   fields:
+        created_dt: '2014-06-04T00:00:00'
+        modified_dt: '2014-06-04T00:00:00'
+        name: AdBanana
+        source_type: 1
+        tracking_slug: '["fake"]'
+    model: dash.source
+    pk: 2
+
+-   fields:
+        created_dt: '2014-06-04T00:00:00'
+        modified_dt: '2014-06-04T00:00:00'
+        name: AdOrange
+        source_type: 1
+        tracking_slug: '["fake2"]'
+    model: dash.source
+    pk: 3
+
 
 # Ad Group Sources
 - fields:
@@ -196,6 +214,20 @@
     source_campaign_key: '["fake"]'
   model: dash.adgroupsource
   pk: 4
+
+- fields:
+    source: 2
+    ad_group: 4
+    source_campaign_key: '["fake"]'
+  model: dash.adgroupsource
+  pk: 5
+
+- fields:
+    source: 3
+    ad_group: 4
+    source_campaign_key: '["fake"]'
+  model: dash.adgroupsource
+  pk: 6
 
 # Ad Group Source Settings
 - fields:
@@ -245,6 +277,26 @@
     autopilot_state: 1
   model: dash.adgroupsourcesettings
   pk: 5
+
+- fields:
+    created_dt: '2014-06-01T09:58:21'
+    ad_group_source: 5
+    cpc_cc: '0.12'
+    daily_budget_cc: '50.'
+    state: 1
+    autopilot_state: 1
+  model: dash.adgroupsourcesettings
+  pk: 6
+
+- fields:
+    created_dt: '2014-06-01T09:58:21'
+    ad_group_source: 6
+    cpc_cc: '0.12'
+    daily_budget_cc: '50.'
+    state: 1
+    autopilot_state: 1
+  model: dash.adgroupsourcesettings
+  pk: 7
 
 # Credit line items
 - fields:
