there are no artifacts on CircleCI

--- a/circle.yml
+++ b/circle.yml
@@ -2,8 +2,6 @@ general:
     artifacts:
         - ./server/coverage_report.txt
         - ./client/coverage/text/*
-        - ./server.tar.gz
-        - ./client.tar.gz
 
 checkout:
     post:
@@ -44,10 +42,10 @@ test:
         - 'echo "${CIRCLE_BUILD_NUM}" > build_number.txt':
             parallel: true
             pwd: server
-        - 'if [[ "$CIRCLE_NODE_INDEX" == "0" ]]; then tar -pc * -zf ../server.tar.gz; fi':
+        - 'if [[ "$CIRCLE_NODE_INDEX" == "0" ]]; then tar -pc * -zf $CIRCLE_ARTIFACTS/server.tar.gz; fi':
             parallel: true
             pwd: server
-        - 'if [[ "$CIRCLE_NODE_INDEX" == "1" ]]; then tar -pc dist/ ../server/static -zf ../client.tar.gz; else export; fi':
+        - 'if [[ "$CIRCLE_NODE_INDEX" == "1" ]]; then tar -pc dist/ ../server/static -zf $CIRCLE_ARTIFACTS/client.tar.gz; else export; fi':
             parallel: true
             pwd: client
         - 'if [[ "$CIRCLE_NODE_INDEX" == "1" ]] && [[ "$CIRCLE_BRANCH" == "master" ]]; then ./scripts/push_static_to_s3.sh; fi':
