there are no artifacts on CircleCI #2

--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,7 @@ general:
     artifacts:
         - ./server/coverage_report.txt
         - ./client/coverage/text/*
+        - /home/ubuntu/server.tar.gz
 
 checkout:
     post:
@@ -10,7 +11,7 @@ checkout:
 
 machine:
     python:
-        version: 2.7.6
+        version: 2.7.10
     node:
         version: v0.10.22
 
@@ -42,7 +43,7 @@ test:
         - 'echo "${CIRCLE_BUILD_NUM}" > build_number.txt':
             parallel: true
             pwd: server
-        - 'if [[ "$CIRCLE_NODE_INDEX" == "0" ]]; then tar -pc * -zf $CIRCLE_ARTIFACTS/server.tar.gz; fi':
+        - 'if [[ "$CIRCLE_NODE_INDEX" == "0" ]]; then tar -pc * -zf ../server.tar.gz; fi':
             parallel: true
             pwd: server
         - 'if [[ "$CIRCLE_NODE_INDEX" == "1" ]]; then tar -pc dist/ ../server/static -zf $CIRCLE_ARTIFACTS/client.tar.gz; else export; fi':
